--- a/RecipeApp/Base.lproj/LaunchScreen.storyboard
+++ b/RecipeApp/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +20,57 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H5K-Jt-PV2">
+                                <rect key="frame" x="43" y="301" width="288" height="65"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Recipe App">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="0.93857144468338682" blue="0.99670703476958933" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="55" name=".SFNSDisplay"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="10" height="8"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMg-JF-4i8">
+                                <rect key="frame" x="32" y="258" width="310" height="43"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Welcome to the">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="0.93857144468338682" blue="0.99670703476958933" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="45" name=".AppleSystemUIFont"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="clip-art-forks-and-spoons-36" translatesAutoresizingMaskIntoConstraints="NO" id="f7a-io-EWm">
+                                <rect key="frame" x="0.0" y="394" width="375" height="224"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.28337187441431211" green="0.78216078367875652" blue="0.34784353721162958" alpha="0.62392715669014087" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.2833718744" green="0.78216078369999997" blue="0.3478435372" alpha="0.62392715669999999" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="H5K-Jt-PV2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="52L-xn-nWr"/>
+                            <constraint firstItem="H5K-Jt-PV2" firstAttribute="top" secondItem="EMg-JF-4i8" secondAttribute="bottom" id="EDe-UP-Z1n"/>
+                            <constraint firstItem="H5K-Jt-PV2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="OQk-I4-XvT"/>
+                            <constraint firstItem="EMg-JF-4i8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UMx-sd-pDt"/>
+                            <constraint firstItem="H5K-Jt-PV2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wL9-E2-td8"/>
+                            <constraint firstItem="EMg-JF-4i8" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="238" id="yqF-gk-ygA"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="clip-art-forks-and-spoons-36" width="298" height="192"/>
+    </resources>
 </document>
